5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1771_1183.log
== TEST (2019-05-30 11:34:12) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=a
while(i<size(a)):
	if(a[i])<=0:
		c=c+a[i]
	i=i+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:18) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
while(i<size(a)):
	if(a[i])<=0:
		c=c+a[i]
	i=i+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:55) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
while(i<size(a)):
	if(a[i])>=0:
		c=c+a[i]
	i=i+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:01) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
while(i<size(a)):
	if(a[i])>=0:
		c=c+a[i]
	i=i+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:54) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
while(i<size(a)):
	if(a[i])>=0:
		c=c+a[i]
		print(c)
	i=i+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:39:00) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
while(i<size(a)):
	if(a[i])>=0:
		c=c+a[i]
		print(c)
	i=i+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:40:34) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=a
while(i<size(a)):
	if(a[i])<=0:
		c=c-a[i]
	i=i+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:36) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=a
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
	i=i+1
iii=0
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:52) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=a
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
	i=i+1
iii=0
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:40) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=a
b=0
while(i<size(a)):
	if(a[i])>=0:
		a=a[i],a[i]
		b=b+1	
	i=i+1
iii=0
while(iii<b):
	
print(a)
-- ERROR:
File "XXXX", line 14
    print(a)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:03) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=a
b=0
while(i<size(a)):
	if(a[i])>=0:
		a=a[i],a[i]
		b=b+1	
	i=i+1
	print(a)
iii=0
while(iii<b):
-- ERROR:
File "XXXX", line 14
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:16) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=a
b=0
while(i<size(a)):
	if(a[i])>=0:
		a=a[i],a[i]
		b=b+1	
	i=i+1
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:49) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=a
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
		c=a[i]
	i=i+1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:18) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=a
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
		c=a[i]
	i=i+1
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:31) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=a
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
		c=a[i]
	i=i+1
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:20) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
		c=c+a[i]
	i=i+1
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:43) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
		c=sum(c)+a[i]
		c=c-a
		i=i+1
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:55:13) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
		c=sum(c)+a[i]
		c=c-a
		i=i+1
		print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:55:25) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
		c=sum(c)+a[i]
		c=c-a
		i=i+1
		print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:55:46) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
		c=sum(c)+a[i]
		c=c-a
		i=i+1
		print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:16:01) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1	
		c=sum(c)+a[i]
		c=c-a
		i=i+1
		print(c)
for v in a:
	if (v<0):
		del (v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:20:06) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1
		i=i+1
print(a.replace(a[i]<0, ''))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:34:53) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+a[i]
	else:
		b=b
	i=i+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:35:07) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+a[i]
	else:
		b=b
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:36:12) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=" "
while(i<size(a)):
	if(a[i])>=0:
		b=b+str(a[i])
	else:
		b=b
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:37:10) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=" "
while(i<size(a)):
	if(a[i])>=0:
		b=b+" "+str(a[i])
	else:
		b=b
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:37:39) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=" "
while(i<size(a)):
	if(a[i])>=0:
		b=[b+" "+str(a[i])]
	else:
		b=b
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:38:22) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=" "
while(i<size(a)):
	if(a[i])>=0:
		b=b+" "+str(a[i])
	else:
		b=b
	i=i+1
print(list(b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:39:08) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=" "
while(i<size(a)):
	if(a[i])>=0:
		b=b+str(a[i])
	else:
		b=b
	i=i+1
print(array(b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:39:41) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=" "
while(i<size(a)):
	if(a[i])>=0:
		b=b+str(a[i])
	else:
		b=b
	i=i+1
print(list(b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:40:07) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
c=0
b=" "
while(i<size(a)):
	if(a[i])>=0:
		b=str(a[i])
	else:
		b=b
	i=i+1
print(list(b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:40:52) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
b=""
while(i<size(a)):
	if(a[i])>=0:
		b=b+str(a[i])
	else:
		b=b
	i=i+1
print(list(b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:41:09) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
b=""
while(i<size(a)):
	if(a[i])>=0:
		b=b+str(a[i])
	else:
		b=b
	i=i+1
print(list(b))
-- EXECUTION TIME:
0.668252
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
['1']
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
['2', '3', '5']
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
['1', '8', '3', '2', '1', '4', '2', '5']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:41:38) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
b=""
while(i<size(a)):
	if(a[i])>=0:
		b=b+str(a[i])
	else:
		b=b
	i=i+1
print(eval(b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:43:00) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
b=""
while(i<size(a)):
	if(a[i])>=0:
		b=b+str(a[i])
	else:
		b=b
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:44:44) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
b=""
while(i<size(a)):
	if(a[i])>=0:
		b=b+" "+str(a[i])
	else:
		b=b
	i=i+1
print(f'[{b}]')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:51) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1
	else:
		b=b+0
	i=i+1
ii=0
iii=0
z=zeros(b, dtype)
while(iii<b):
	if(a>=0):
		z[iii]=a[ii]
		ii=ii+1
		iii=iii+1
	else:
		ii=ii+1
		iii=iii+0
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:29:38) 
-- CODE:
from numpy import*
a=array(eval(input("digite seus elementos: ")))
i=0
b=0
while(i<size(a)):
	if(a[i])>=0:
		b=b+1
	else:
		b=b+0
	i=i+1
ii=0
iii=0
z=zeros(b, dtype)
while(iii<b):
	if(a[ii]>=0):
		z[iii]=a[ii]
		ii=ii+1
		iii=iii+1
	else:
		ii=ii+1
		iii=iii+0
print(z)
-- EXECUTION TIME:
0.339967
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
